tests/errors/catchable/catch_div.zy
!? {
    x = 1 / 0
    >> x ¶
} :! ##Div {
    >> "caught: Div" ¶
}
>> "continues" ¶
